<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/userPhotoContainer"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary">
    </View>

    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:background="@drawable/circle_with_border"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/nameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userPhotoContainer"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/nameDisplay"
        android:textSize="34sp"
        />

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameDisplay"
        android:text="Username:"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:paddingTop="25dp"
        android:paddingLeft="15dp"/>

    <TextView
        android:id="@+id/userNameActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userNameLabel"
        android:layout_toRightOf="@+id/userNameLabel"
        android:paddingLeft="10dp"
        android:text="Bergerrunner"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/userEmailLabel"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameLabel"
        android:text="Email:"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:paddingTop="25dp"
        android:paddingLeft="15dp"/>


    <TextView
        android:id="@+id/userEmailActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userEmailLabel"
        android:layout_toRightOf="@+id/userEmailLabel"
        android:paddingLeft="10dp"
        android:text="ellenb1@stolaf.edu"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/biographyLabel"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userEmailLabel"
        android:text="Biography:"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:paddingTop="25dp"
        android:paddingLeft="15dp"/>

    <TextView
        android:id="@+id/biographyActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/biographyLabel"
        android:layout_toRightOf="@+id/biographyLabel"
        android:paddingTop="25dp"
        android:paddingLeft="15dp"
        android:text="@string/bioContentlol"
        android:textSize="16sp"/>


    <Button
        android:id="@+id/editBioButton"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/biographyActual"
        android:textSize="10sp"
        android:text="@string/edit_bio_label"/>

    <Button
        android:id="@+id/buttonProfilePicture"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_toLeftOf="@+id/editBioButton"
        android:layout_alignBaseline="@+id/editBioButton"
        android:layout_marginRight="25dp"
        android:text="@string/edit_pic_label"
        android:textSize="10sp"/>




</RelativeLayout>